// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageList Item component when \`isRead\` is true should match the snapshot 1`] = `
<View
  accessibilityLabel="Message, received by Ċentru tas-Saħħa, health. Għandek flus?. 
    received on October 18th 2021
  . "
  accessibilityRole="button"
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
      "paddingVertical": 16,
    }
  }
  testID="MessageListItem_PMT00003"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flexBasis": "100%",
          "flexGrow": 1,
          "flexShrink": 1,
        }
      }
    >
      <Text
        color="bluegreyDark"
        defaultColor="bluegreyDark"
        defaultWeight="SemiBold"
        font="TitilliumWeb"
        fontStyle={
          Object {
            "fontSize": 14,
          }
        }
        numberOfLines={1}
        style={
          Array [
            Object {
              "fontSize": 14,
            },
            Object {
              "color": "#17324D",
              "fontFamily": "Titillium Web",
              "fontStyle": "normal",
              "fontWeight": "600",
            },
          ]
        }
        weight="SemiBold"
      >
        Ċentru tas-Saħħa
      </Text>
    </View>
    <View
      style={
        Object {
          "flexBasis": "auto",
          "flexDirection": "row",
          "flexGrow": 0,
          "flexShrink": 0,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#000",
              "fontFamily": "System",
              "fontSize": 16,
            },
            Object {
              "fontWeight": "bold",
              "lineHeight": 20,
              "marginLeft": 7,
              "overflow": "hidden",
              "textAlign": "right",
            },
          ]
        }
        uppercase={false}
      >
        10/18/21
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
        },
        false,
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#000",
          "fontFamily": "System",
          "fontSize": 16,
        }
      }
      uppercase={false}
    >
      health
    </Text>
  </View>
  <View
    style={
      Object {
        "height": 4,
        "width": "100%",
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "flexBasis": "100%",
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
            "minHeight": 24,
          },
          false,
        ]
      }
    >
      <View
        style={
          Object {
            "flexBasis": "100%",
            "flexGrow": 1,
            "flexShrink": 1,
          }
        }
      >
        <Text
          color="bluegreyDark"
          font="TitilliumWeb"
          fontStyle={
            Object {
              "fontSize": 18,
            }
          }
          numberOfLines={2}
          style={
            Array [
              Object {
                "fontSize": 18,
              },
              Object {
                "color": "#17324D",
                "fontFamily": "Titillium Web",
                "fontStyle": "normal",
                "fontWeight": "600",
              },
            ]
          }
          weight="SemiBold"
          weightColorFactory={[Function]}
        >
          Għandek flus?
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`MessageList Item component when \`isSelectionModeEnabled\` is true and \`isSelected\` is false should match the snapshot 1`] = `
<View
  accessibilityLabel="Unread message, received by Ċentru tas-Saħħa, health. Għandek flus?. 
    received on October 18th 2021
  . "
  accessibilityRole="button"
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
      "paddingVertical": 16,
    }
  }
  testID="MessageListItem_PMT00003"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flexBasis": "100%",
          "flexGrow": 1,
          "flexShrink": 1,
        }
      }
    >
      <Text
        color="bluegreyDark"
        defaultColor="bluegreyDark"
        defaultWeight="SemiBold"
        font="TitilliumWeb"
        fontStyle={
          Object {
            "fontSize": 14,
          }
        }
        numberOfLines={1}
        style={
          Array [
            Object {
              "fontSize": 14,
            },
            Object {
              "color": "#17324D",
              "fontFamily": "Titillium Web",
              "fontStyle": "normal",
              "fontWeight": "600",
            },
          ]
        }
        weight="SemiBold"
      >
        Ċentru tas-Saħħa
      </Text>
    </View>
    <View
      style={
        Object {
          "flexBasis": "auto",
          "flexDirection": "row",
          "flexGrow": 0,
          "flexShrink": 0,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#000",
              "fontFamily": "System",
              "fontSize": 16,
            },
            Object {
              "fontWeight": "bold",
              "lineHeight": 20,
              "marginLeft": 7,
              "overflow": "hidden",
              "textAlign": "right",
            },
          ]
        }
        uppercase={false}
      >
        10/18/21
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
        },
        false,
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#000",
          "fontFamily": "System",
          "fontSize": 16,
        }
      }
      uppercase={false}
    >
      health
    </Text>
  </View>
  <View
    style={
      Object {
        "height": 4,
        "width": "100%",
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "flexBasis": "100%",
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
            "minHeight": 24,
          },
          false,
        ]
      }
    >
      <View
        style={
          Object {
            "alignSelf": "flex-start",
            "flex": 0,
            "flexBasis": "auto",
            "flexGrow": 0,
            "flexShrink": 0,
            "paddingRight": 8,
            "paddingTop": 6.5,
          }
        }
      >
        <RNSVGSvgView
          bbHeight={10}
          bbWidth={10}
          focusable={false}
          height={10}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "flex": 0,
                "height": 10,
                "width": 10,
              },
            ]
          }
          width={10}
        >
          <RNSVGGroup>
            <RNSVGCircle
              cx="50%"
              cy="50%"
              fill={4278219750}
              propList={
                Array [
                  "fill",
                ]
              }
              r={5}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
      <View
        style={
          Object {
            "flexBasis": "100%",
            "flexGrow": 1,
            "flexShrink": 1,
          }
        }
      >
        <Text
          color="bluegreyDark"
          font="TitilliumWeb"
          fontStyle={
            Object {
              "fontSize": 18,
            }
          }
          numberOfLines={2}
          style={
            Array [
              Object {
                "fontSize": 18,
              },
              Object {
                "color": "#17324D",
                "fontFamily": "Titillium Web",
                "fontStyle": "normal",
                "fontWeight": "600",
              },
            ]
          }
          weight="SemiBold"
          weightColorFactory={[Function]}
        >
          Għandek flus?
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "alignSelf": "center",
            "flexGrow": 0,
            "flexShrink": 0,
          },
          false,
        ]
      }
    >
      <Text
        accessibilityElementsHidden={true}
        accessibilityLabel=""
        accessible={false}
        allowFontScaling={false}
        importantForAccessibility="no-hide-descendants"
        style={
          Array [
            Object {
              "color": "#0073E6",
              "fontSize": 24,
            },
            Array [
              Object {},
              Object {
                "color": "#0073E6",
              },
              Object {
                "fontSize": 24,
              },
            ],
            Object {
              "fontFamily": "io-icon-font",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        R
      </Text>
    </View>
  </View>
</View>
`;

exports[`MessageList Item component when \`isSelectionModeEnabled\` is true and \`isSelected\` is true should match the snapshot 1`] = `
<View
  accessibilityLabel="Unread message, received by Ċentru tas-Saħħa, health. Għandek flus?. 
    received on October 18th 2021
  . "
  accessibilityRole="button"
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
      "paddingVertical": 16,
    }
  }
  testID="MessageListItem_PMT00003"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flexBasis": "100%",
          "flexGrow": 1,
          "flexShrink": 1,
        }
      }
    >
      <Text
        color="bluegreyDark"
        defaultColor="bluegreyDark"
        defaultWeight="SemiBold"
        font="TitilliumWeb"
        fontStyle={
          Object {
            "fontSize": 14,
          }
        }
        numberOfLines={1}
        style={
          Array [
            Object {
              "fontSize": 14,
            },
            Object {
              "color": "#17324D",
              "fontFamily": "Titillium Web",
              "fontStyle": "normal",
              "fontWeight": "600",
            },
          ]
        }
        weight="SemiBold"
      >
        Ċentru tas-Saħħa
      </Text>
    </View>
    <View
      style={
        Object {
          "flexBasis": "auto",
          "flexDirection": "row",
          "flexGrow": 0,
          "flexShrink": 0,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#000",
              "fontFamily": "System",
              "fontSize": 16,
            },
            Object {
              "fontWeight": "bold",
              "lineHeight": 20,
              "marginLeft": 7,
              "overflow": "hidden",
              "textAlign": "right",
            },
          ]
        }
        uppercase={false}
      >
        10/18/21
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
        },
        false,
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#000",
          "fontFamily": "System",
          "fontSize": 16,
        }
      }
      uppercase={false}
    >
      health
    </Text>
  </View>
  <View
    style={
      Object {
        "height": 4,
        "width": "100%",
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "flexBasis": "100%",
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
            "minHeight": 24,
          },
          false,
        ]
      }
    >
      <View
        style={
          Object {
            "alignSelf": "flex-start",
            "flex": 0,
            "flexBasis": "auto",
            "flexGrow": 0,
            "flexShrink": 0,
            "paddingRight": 8,
            "paddingTop": 6.5,
          }
        }
      >
        <RNSVGSvgView
          bbHeight={10}
          bbWidth={10}
          focusable={false}
          height={10}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "flex": 0,
                "height": 10,
                "width": 10,
              },
            ]
          }
          width={10}
        >
          <RNSVGGroup>
            <RNSVGCircle
              cx="50%"
              cy="50%"
              fill={4278219750}
              propList={
                Array [
                  "fill",
                ]
              }
              r={5}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
      <View
        style={
          Object {
            "flexBasis": "100%",
            "flexGrow": 1,
            "flexShrink": 1,
          }
        }
      >
        <Text
          color="bluegreyDark"
          font="TitilliumWeb"
          fontStyle={
            Object {
              "fontSize": 18,
            }
          }
          numberOfLines={2}
          style={
            Array [
              Object {
                "fontSize": 18,
              },
              Object {
                "color": "#17324D",
                "fontFamily": "Titillium Web",
                "fontStyle": "normal",
                "fontWeight": "600",
              },
            ]
          }
          weight="SemiBold"
          weightColorFactory={[Function]}
        >
          Għandek flus?
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "alignSelf": "center",
            "flexGrow": 0,
            "flexShrink": 0,
          },
          false,
        ]
      }
    >
      <Text
        accessibilityElementsHidden={true}
        accessibilityLabel=""
        accessible={false}
        allowFontScaling={false}
        importantForAccessibility="no-hide-descendants"
        style={
          Array [
            Object {
              "color": "#0073E6",
              "fontSize": 24,
            },
            Array [
              Object {},
              Object {
                "color": "#0073E6",
              },
              Object {
                "fontSize": 24,
              },
            ],
            Object {
              "fontFamily": "io-icon-font",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        S
      </Text>
    </View>
  </View>
</View>
`;

exports[`MessageList Item component when category is LEGAL_MESSAGE should match the snapshot 1`] = `
<View
  accessibilityLabel="Unread message, received by Ċentru tas-Saħħa, health. Għandek flus?. 
    received on October 18th 2021
  . "
  accessibilityRole="button"
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
      "paddingVertical": 16,
    }
  }
  testID="MessageListItem_PMT00003"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flexBasis": "100%",
          "flexGrow": 1,
          "flexShrink": 1,
        }
      }
    >
      <Text
        color="bluegreyDark"
        defaultColor="bluegreyDark"
        defaultWeight="SemiBold"
        font="TitilliumWeb"
        fontStyle={
          Object {
            "fontSize": 14,
          }
        }
        numberOfLines={1}
        style={
          Array [
            Object {
              "fontSize": 14,
            },
            Object {
              "color": "#17324D",
              "fontFamily": "Titillium Web",
              "fontStyle": "normal",
              "fontWeight": "600",
            },
          ]
        }
        weight="SemiBold"
      >
        Ċentru tas-Saħħa
      </Text>
    </View>
    <View
      style={
        Object {
          "flexBasis": "auto",
          "flexDirection": "row",
          "flexGrow": 0,
          "flexShrink": 0,
        }
      }
    >
      <SvgMock
        fill="#CCD4DC"
        height={20}
        width={20}
      />
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#000",
              "fontFamily": "System",
              "fontSize": 16,
            },
            Object {
              "fontWeight": "bold",
              "lineHeight": 20,
              "marginLeft": 7,
              "overflow": "hidden",
              "textAlign": "right",
            },
          ]
        }
        uppercase={false}
      >
        10/18/21
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
        },
        false,
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#000",
          "fontFamily": "System",
          "fontSize": 16,
        }
      }
      uppercase={false}
    >
      health
    </Text>
  </View>
  <View
    style={
      Object {
        "height": 4,
        "width": "100%",
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "flexBasis": "100%",
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
            "minHeight": 24,
          },
          false,
        ]
      }
    >
      <View
        style={
          Object {
            "alignSelf": "flex-start",
            "flex": 0,
            "flexBasis": "auto",
            "flexGrow": 0,
            "flexShrink": 0,
            "paddingRight": 8,
            "paddingTop": 6.5,
          }
        }
      >
        <RNSVGSvgView
          bbHeight={10}
          bbWidth={10}
          focusable={false}
          height={10}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "flex": 0,
                "height": 10,
                "width": 10,
              },
            ]
          }
          width={10}
        >
          <RNSVGGroup>
            <RNSVGCircle
              cx="50%"
              cy="50%"
              fill={4278219750}
              propList={
                Array [
                  "fill",
                ]
              }
              r={5}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
      <View
        style={
          Object {
            "flexBasis": "100%",
            "flexGrow": 1,
            "flexShrink": 1,
          }
        }
      >
        <Text
          color="bluegreyDark"
          font="TitilliumWeb"
          fontStyle={
            Object {
              "fontSize": 18,
            }
          }
          numberOfLines={2}
          style={
            Array [
              Object {
                "fontSize": 18,
              },
              Object {
                "color": "#17324D",
                "fontFamily": "Titillium Web",
                "fontStyle": "normal",
                "fontWeight": "600",
              },
            ]
          }
          weight="SemiBold"
          weightColorFactory={[Function]}
        >
          Għandek flus?
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`MessageList Item component when category is PN should match the snapshot 1`] = `
<View
  accessibilityLabel="Unread message, received by Ċentru tas-Saħħa, health. Għandek flus?. 
    received on October 18th 2021
  . "
  accessibilityRole="button"
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
      "paddingVertical": 16,
    }
  }
  testID="MessageListItem_PMT00003"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flexBasis": "100%",
          "flexGrow": 1,
          "flexShrink": 1,
        }
      }
    >
      <Text
        color="bluegreyDark"
        defaultColor="bluegreyDark"
        defaultWeight="SemiBold"
        font="TitilliumWeb"
        fontStyle={
          Object {
            "fontSize": 14,
          }
        }
        numberOfLines={1}
        style={
          Array [
            Object {
              "fontSize": 14,
            },
            Object {
              "color": "#17324D",
              "fontFamily": "Titillium Web",
              "fontStyle": "normal",
              "fontWeight": "600",
            },
          ]
        }
        weight="SemiBold"
      >
        Ċentru tas-Saħħa
      </Text>
    </View>
    <View
      style={
        Object {
          "flexBasis": "auto",
          "flexDirection": "row",
          "flexGrow": 0,
          "flexShrink": 0,
        }
      }
    >
      <SvgMock
        fill="#CCD4DC"
        height={20}
        width={20}
      />
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#000",
              "fontFamily": "System",
              "fontSize": 16,
            },
            Object {
              "fontWeight": "bold",
              "lineHeight": 20,
              "marginLeft": 7,
              "overflow": "hidden",
              "textAlign": "right",
            },
          ]
        }
        uppercase={false}
      >
        10/18/21
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
        },
        false,
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#000",
          "fontFamily": "System",
          "fontSize": 16,
        }
      }
      uppercase={false}
    >
      health
    </Text>
  </View>
  <View
    style={
      Object {
        "height": 4,
        "width": "100%",
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "flexBasis": "100%",
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
            "minHeight": 24,
          },
          false,
        ]
      }
    >
      <View
        style={
          Object {
            "alignSelf": "flex-start",
            "flex": 0,
            "flexBasis": "auto",
            "flexGrow": 0,
            "flexShrink": 0,
            "paddingRight": 8,
            "paddingTop": 6.5,
          }
        }
      >
        <RNSVGSvgView
          bbHeight={10}
          bbWidth={10}
          focusable={false}
          height={10}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "flex": 0,
                "height": 10,
                "width": 10,
              },
            ]
          }
          width={10}
        >
          <RNSVGGroup>
            <RNSVGCircle
              cx="50%"
              cy="50%"
              fill={4278219750}
              propList={
                Array [
                  "fill",
                ]
              }
              r={5}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
      <View
        style={
          Object {
            "flexBasis": "100%",
            "flexGrow": 1,
            "flexShrink": 1,
          }
        }
      >
        <Text
          color="bluegreyDark"
          font="TitilliumWeb"
          fontStyle={
            Object {
              "fontSize": 18,
            }
          }
          numberOfLines={2}
          style={
            Array [
              Object {
                "fontSize": 18,
              },
              Object {
                "color": "#17324D",
                "fontFamily": "Titillium Web",
                "fontStyle": "normal",
                "fontWeight": "600",
              },
            ]
          }
          weight="SemiBold"
          weightColorFactory={[Function]}
        >
          Għandek flus?
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`MessageList Item component when hasPaidBadge=false category=EU_COVID_CERT should match the snapshot 1`] = `
<View
  accessibilityLabel="Unread message, received by Ċentru tas-Saħħa, health. Għandek flus?. 
    received on October 18th 2021
  . "
  accessibilityRole="button"
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
      "paddingVertical": 16,
    }
  }
  testID="MessageListItem_PMT00003"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flexBasis": "100%",
          "flexGrow": 1,
          "flexShrink": 1,
        }
      }
    >
      <Text
        color="bluegreyDark"
        defaultColor="bluegreyDark"
        defaultWeight="SemiBold"
        font="TitilliumWeb"
        fontStyle={
          Object {
            "fontSize": 14,
          }
        }
        numberOfLines={1}
        style={
          Array [
            Object {
              "fontSize": 14,
            },
            Object {
              "color": "#17324D",
              "fontFamily": "Titillium Web",
              "fontStyle": "normal",
              "fontWeight": "600",
            },
          ]
        }
        weight="SemiBold"
      >
        Ċentru tas-Saħħa
      </Text>
    </View>
    <View
      style={
        Object {
          "flexBasis": "auto",
          "flexDirection": "row",
          "flexGrow": 0,
          "flexShrink": 0,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#000",
              "fontFamily": "System",
              "fontSize": 16,
            },
            Object {
              "fontWeight": "bold",
              "lineHeight": 20,
              "marginLeft": 7,
              "overflow": "hidden",
              "textAlign": "right",
            },
          ]
        }
        uppercase={false}
      >
        10/18/21
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
        },
        Object {
          "marginRight": 56,
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#000",
          "fontFamily": "System",
          "fontSize": 16,
        }
      }
      uppercase={false}
    >
      health
    </Text>
  </View>
  <View
    style={
      Object {
        "height": 4,
        "width": "100%",
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "flexBasis": "100%",
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
            "minHeight": 24,
          },
          Object {
            "marginRight": 56,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignSelf": "flex-start",
            "flex": 0,
            "flexBasis": "auto",
            "flexGrow": 0,
            "flexShrink": 0,
            "paddingRight": 8,
            "paddingTop": 6.5,
          }
        }
      >
        <RNSVGSvgView
          bbHeight={10}
          bbWidth={10}
          focusable={false}
          height={10}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "flex": 0,
                "height": 10,
                "width": 10,
              },
            ]
          }
          width={10}
        >
          <RNSVGGroup>
            <RNSVGCircle
              cx="50%"
              cy="50%"
              fill={4278219750}
              propList={
                Array [
                  "fill",
                ]
              }
              r={5}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
      <View
        style={
          Object {
            "flexBasis": "100%",
            "flexGrow": 1,
            "flexShrink": 1,
          }
        }
      >
        <Text
          color="bluegreyDark"
          font="TitilliumWeb"
          fontStyle={
            Object {
              "fontSize": 18,
            }
          }
          numberOfLines={2}
          style={
            Array [
              Object {
                "fontSize": 18,
              },
              Object {
                "color": "#17324D",
                "fontFamily": "Titillium Web",
                "fontStyle": "normal",
                "fontWeight": "600",
              },
            ]
          }
          weight="SemiBold"
          weightColorFactory={[Function]}
        >
          Għandek flus?
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#0073E6",
          "borderRadius": 24,
          "bottom": 0,
          "color": "#FFFFFF",
          "height": 48,
          "justifyContent": "center",
          "position": "absolute",
          "right": 0,
          "width": 48,
        }
      }
    >
      <SvgMock
        fill="#FFFFFF"
        height={22}
        width={22}
      />
    </View>
  </View>
</View>
`;

exports[`MessageList Item component when hasPaidBadge=false category=GENERIC should match the snapshot 1`] = `
<View
  accessibilityLabel="Unread message, received by Ċentru tas-Saħħa, health. Għandek flus?. 
    received on October 18th 2021
  . "
  accessibilityRole="button"
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
      "paddingVertical": 16,
    }
  }
  testID="MessageListItem_PMT00003"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flexBasis": "100%",
          "flexGrow": 1,
          "flexShrink": 1,
        }
      }
    >
      <Text
        color="bluegreyDark"
        defaultColor="bluegreyDark"
        defaultWeight="SemiBold"
        font="TitilliumWeb"
        fontStyle={
          Object {
            "fontSize": 14,
          }
        }
        numberOfLines={1}
        style={
          Array [
            Object {
              "fontSize": 14,
            },
            Object {
              "color": "#17324D",
              "fontFamily": "Titillium Web",
              "fontStyle": "normal",
              "fontWeight": "600",
            },
          ]
        }
        weight="SemiBold"
      >
        Ċentru tas-Saħħa
      </Text>
    </View>
    <View
      style={
        Object {
          "flexBasis": "auto",
          "flexDirection": "row",
          "flexGrow": 0,
          "flexShrink": 0,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#000",
              "fontFamily": "System",
              "fontSize": 16,
            },
            Object {
              "fontWeight": "bold",
              "lineHeight": 20,
              "marginLeft": 7,
              "overflow": "hidden",
              "textAlign": "right",
            },
          ]
        }
        uppercase={false}
      >
        10/18/21
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
        },
        false,
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#000",
          "fontFamily": "System",
          "fontSize": 16,
        }
      }
      uppercase={false}
    >
      health
    </Text>
  </View>
  <View
    style={
      Object {
        "height": 4,
        "width": "100%",
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "flexBasis": "100%",
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
            "minHeight": 24,
          },
          false,
        ]
      }
    >
      <View
        style={
          Object {
            "alignSelf": "flex-start",
            "flex": 0,
            "flexBasis": "auto",
            "flexGrow": 0,
            "flexShrink": 0,
            "paddingRight": 8,
            "paddingTop": 6.5,
          }
        }
      >
        <RNSVGSvgView
          bbHeight={10}
          bbWidth={10}
          focusable={false}
          height={10}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "flex": 0,
                "height": 10,
                "width": 10,
              },
            ]
          }
          width={10}
        >
          <RNSVGGroup>
            <RNSVGCircle
              cx="50%"
              cy="50%"
              fill={4278219750}
              propList={
                Array [
                  "fill",
                ]
              }
              r={5}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
      <View
        style={
          Object {
            "flexBasis": "100%",
            "flexGrow": 1,
            "flexShrink": 1,
          }
        }
      >
        <Text
          color="bluegreyDark"
          font="TitilliumWeb"
          fontStyle={
            Object {
              "fontSize": 18,
            }
          }
          numberOfLines={2}
          style={
            Array [
              Object {
                "fontSize": 18,
              },
              Object {
                "color": "#17324D",
                "fontFamily": "Titillium Web",
                "fontStyle": "normal",
                "fontWeight": "600",
              },
            ]
          }
          weight="SemiBold"
          weightColorFactory={[Function]}
        >
          Għandek flus?
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`MessageList Item component when hasPaidBadge=true category=EU_COVID_CERT should match the snapshot 1`] = `
<View
  accessibilityLabel="Unread message, received by Ċentru tas-Saħħa, health. Għandek flus?. 
    received on October 18th 2021
  . Paid"
  accessibilityRole="button"
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
      "paddingVertical": 16,
    }
  }
  testID="MessageListItem_PMT00003"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flexBasis": "100%",
          "flexGrow": 1,
          "flexShrink": 1,
        }
      }
    >
      <Text
        color="bluegreyDark"
        defaultColor="bluegreyDark"
        defaultWeight="SemiBold"
        font="TitilliumWeb"
        fontStyle={
          Object {
            "fontSize": 14,
          }
        }
        numberOfLines={1}
        style={
          Array [
            Object {
              "fontSize": 14,
            },
            Object {
              "color": "#17324D",
              "fontFamily": "Titillium Web",
              "fontStyle": "normal",
              "fontWeight": "600",
            },
          ]
        }
        weight="SemiBold"
      >
        Ċentru tas-Saħħa
      </Text>
    </View>
    <View
      style={
        Object {
          "flexBasis": "auto",
          "flexDirection": "row",
          "flexGrow": 0,
          "flexShrink": 0,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#000",
              "fontFamily": "System",
              "fontSize": 16,
            },
            Object {
              "fontWeight": "bold",
              "lineHeight": 20,
              "marginLeft": 7,
              "overflow": "hidden",
              "textAlign": "right",
            },
          ]
        }
        uppercase={false}
      >
        10/18/21
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
        },
        Object {
          "marginRight": 56,
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#000",
          "fontFamily": "System",
          "fontSize": 16,
        }
      }
      uppercase={false}
    >
      health
    </Text>
  </View>
  <View
    style={
      Object {
        "height": 4,
        "width": "100%",
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "flexBasis": "100%",
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
            "minHeight": 24,
          },
          Object {
            "marginRight": 56,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignSelf": "flex-start",
            "flex": 0,
            "flexBasis": "auto",
            "flexGrow": 0,
            "flexShrink": 0,
            "paddingRight": 8,
            "paddingTop": 6.5,
          }
        }
      >
        <RNSVGSvgView
          bbHeight={10}
          bbWidth={10}
          focusable={false}
          height={10}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "flex": 0,
                "height": 10,
                "width": 10,
              },
            ]
          }
          width={10}
        >
          <RNSVGGroup>
            <RNSVGCircle
              cx="50%"
              cy="50%"
              fill={4278219750}
              propList={
                Array [
                  "fill",
                ]
              }
              r={5}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
      <View
        style={
          Object {
            "flexBasis": "100%",
            "flexGrow": 1,
            "flexShrink": 1,
          }
        }
      >
        <Text
          color="bluegreyDark"
          font="TitilliumWeb"
          fontStyle={
            Object {
              "fontSize": 18,
            }
          }
          numberOfLines={2}
          style={
            Array [
              Object {
                "fontSize": 18,
              },
              Object {
                "color": "#17324D",
                "fontFamily": "Titillium Web",
                "fontStyle": "normal",
                "fontWeight": "600",
              },
            ]
          }
          weight="SemiBold"
          weightColorFactory={[Function]}
        >
          Għandek flus?
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "alignSelf": "flex-start",
            "backgroundColor": "#ED1727",
            "borderRadius": 13.5,
            "height": 27,
            "justifyContent": "center",
            "paddingBottom": 3,
            "paddingLeft": 6,
            "paddingRight": 6,
            "paddingTop": 3,
          },
          Object {
            "backgroundColor": "#00C5CA",
            "borderStyle": "solid",
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 25,
            "width": 74,
          },
          Object {
            "backgroundColor": "#00C5CA",
            "borderColor": "#00C5CA",
          },
        ]
      }
    >
      <Text
        color="bluegreyDark"
        defaultColor="bluegreyDark"
        defaultWeight="SemiBold"
        font="TitilliumWeb"
        fontStyle={
          Object {
            "fontSize": 14,
          }
        }
        style={
          Array [
            Object {
              "fontSize": 14,
            },
            Object {
              "color": "#17324D",
              "fontFamily": "Titillium Web",
              "fontStyle": "normal",
              "fontWeight": "600",
            },
          ]
        }
        weight="SemiBold"
      >
        Paid
      </Text>
    </View>
  </View>
</View>
`;

exports[`MessageList Item component when hasPaidBadge=true category=GENERIC should match the snapshot 1`] = `
<View
  accessibilityLabel="Unread message, received by Ċentru tas-Saħħa, health. Għandek flus?. 
    received on October 18th 2021
  . Paid"
  accessibilityRole="button"
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
      "paddingVertical": 16,
    }
  }
  testID="MessageListItem_PMT00003"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flexBasis": "100%",
          "flexGrow": 1,
          "flexShrink": 1,
        }
      }
    >
      <Text
        color="bluegreyDark"
        defaultColor="bluegreyDark"
        defaultWeight="SemiBold"
        font="TitilliumWeb"
        fontStyle={
          Object {
            "fontSize": 14,
          }
        }
        numberOfLines={1}
        style={
          Array [
            Object {
              "fontSize": 14,
            },
            Object {
              "color": "#17324D",
              "fontFamily": "Titillium Web",
              "fontStyle": "normal",
              "fontWeight": "600",
            },
          ]
        }
        weight="SemiBold"
      >
        Ċentru tas-Saħħa
      </Text>
    </View>
    <View
      style={
        Object {
          "flexBasis": "auto",
          "flexDirection": "row",
          "flexGrow": 0,
          "flexShrink": 0,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#000",
              "fontFamily": "System",
              "fontSize": 16,
            },
            Object {
              "fontWeight": "bold",
              "lineHeight": 20,
              "marginLeft": 7,
              "overflow": "hidden",
              "textAlign": "right",
            },
          ]
        }
        uppercase={false}
      >
        10/18/21
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
        },
        false,
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#000",
          "fontFamily": "System",
          "fontSize": 16,
        }
      }
      uppercase={false}
    >
      health
    </Text>
  </View>
  <View
    style={
      Object {
        "height": 4,
        "width": "100%",
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "flexBasis": "100%",
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
            "minHeight": 24,
          },
          false,
        ]
      }
    >
      <View
        style={
          Object {
            "alignSelf": "flex-start",
            "flex": 0,
            "flexBasis": "auto",
            "flexGrow": 0,
            "flexShrink": 0,
            "paddingRight": 8,
            "paddingTop": 6.5,
          }
        }
      >
        <RNSVGSvgView
          bbHeight={10}
          bbWidth={10}
          focusable={false}
          height={10}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "flex": 0,
                "height": 10,
                "width": 10,
              },
            ]
          }
          width={10}
        >
          <RNSVGGroup>
            <RNSVGCircle
              cx="50%"
              cy="50%"
              fill={4278219750}
              propList={
                Array [
                  "fill",
                ]
              }
              r={5}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
      <View
        style={
          Object {
            "flexBasis": "100%",
            "flexGrow": 1,
            "flexShrink": 1,
          }
        }
      >
        <Text
          color="bluegreyDark"
          font="TitilliumWeb"
          fontStyle={
            Object {
              "fontSize": 18,
            }
          }
          numberOfLines={2}
          style={
            Array [
              Object {
                "fontSize": 18,
              },
              Object {
                "color": "#17324D",
                "fontFamily": "Titillium Web",
                "fontStyle": "normal",
                "fontWeight": "600",
              },
            ]
          }
          weight="SemiBold"
          weightColorFactory={[Function]}
        >
          Għandek flus?
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "alignSelf": "flex-start",
            "backgroundColor": "#ED1727",
            "borderRadius": 13.5,
            "height": 27,
            "justifyContent": "center",
            "paddingBottom": 3,
            "paddingLeft": 6,
            "paddingRight": 6,
            "paddingTop": 3,
          },
          Object {
            "backgroundColor": "#00C5CA",
            "borderStyle": "solid",
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 25,
            "width": 74,
          },
          Object {
            "backgroundColor": "#00C5CA",
            "borderColor": "#00C5CA",
          },
        ]
      }
    >
      <Text
        color="bluegreyDark"
        defaultColor="bluegreyDark"
        defaultWeight="SemiBold"
        font="TitilliumWeb"
        fontStyle={
          Object {
            "fontSize": 14,
          }
        }
        style={
          Array [
            Object {
              "fontSize": 14,
            },
            Object {
              "color": "#17324D",
              "fontFamily": "Titillium Web",
              "fontStyle": "normal",
              "fontWeight": "600",
            },
          ]
        }
        weight="SemiBold"
      >
        Paid
      </Text>
    </View>
  </View>
</View>
`;

exports[`MessageList Item component with all the flags set to false should match the snapshot 1`] = `
<View
  accessibilityLabel="Unread message, received by Ċentru tas-Saħħa, health. Għandek flus?. 
    received on October 18th 2021
  . "
  accessibilityRole="button"
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
      "paddingVertical": 16,
    }
  }
  testID="MessageListItem_PMT00003"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flexBasis": "100%",
          "flexGrow": 1,
          "flexShrink": 1,
        }
      }
    >
      <Text
        color="bluegreyDark"
        defaultColor="bluegreyDark"
        defaultWeight="SemiBold"
        font="TitilliumWeb"
        fontStyle={
          Object {
            "fontSize": 14,
          }
        }
        numberOfLines={1}
        style={
          Array [
            Object {
              "fontSize": 14,
            },
            Object {
              "color": "#17324D",
              "fontFamily": "Titillium Web",
              "fontStyle": "normal",
              "fontWeight": "600",
            },
          ]
        }
        weight="SemiBold"
      >
        Ċentru tas-Saħħa
      </Text>
    </View>
    <View
      style={
        Object {
          "flexBasis": "auto",
          "flexDirection": "row",
          "flexGrow": 0,
          "flexShrink": 0,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#000",
              "fontFamily": "System",
              "fontSize": 16,
            },
            Object {
              "fontWeight": "bold",
              "lineHeight": 20,
              "marginLeft": 7,
              "overflow": "hidden",
              "textAlign": "right",
            },
          ]
        }
        uppercase={false}
      >
        10/18/21
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
        },
        false,
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#000",
          "fontFamily": "System",
          "fontSize": 16,
        }
      }
      uppercase={false}
    >
      health
    </Text>
  </View>
  <View
    style={
      Object {
        "height": 4,
        "width": "100%",
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "flexBasis": "100%",
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
            "minHeight": 24,
          },
          false,
        ]
      }
    >
      <View
        style={
          Object {
            "alignSelf": "flex-start",
            "flex": 0,
            "flexBasis": "auto",
            "flexGrow": 0,
            "flexShrink": 0,
            "paddingRight": 8,
            "paddingTop": 6.5,
          }
        }
      >
        <RNSVGSvgView
          bbHeight={10}
          bbWidth={10}
          focusable={false}
          height={10}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "flex": 0,
                "height": 10,
                "width": 10,
              },
            ]
          }
          width={10}
        >
          <RNSVGGroup>
            <RNSVGCircle
              cx="50%"
              cy="50%"
              fill={4278219750}
              propList={
                Array [
                  "fill",
                ]
              }
              r={5}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
      <View
        style={
          Object {
            "flexBasis": "100%",
            "flexGrow": 1,
            "flexShrink": 1,
          }
        }
      >
        <Text
          color="bluegreyDark"
          font="TitilliumWeb"
          fontStyle={
            Object {
              "fontSize": 18,
            }
          }
          numberOfLines={2}
          style={
            Array [
              Object {
                "fontSize": 18,
              },
              Object {
                "color": "#17324D",
                "fontFamily": "Titillium Web",
                "fontStyle": "normal",
                "fontWeight": "600",
              },
            ]
          }
          weight="SemiBold"
          weightColorFactory={[Function]}
        >
          Għandek flus?
        </Text>
      </View>
    </View>
  </View>
</View>
`;
